# fastapi-kafka-exercise

./: .gitignore  README.md  pyproject.toml
app/: kafka_pc.py  main.py  views.py
kafka/: docker-compose.yml
kafka/bitnami/kafka/data/: meta.properties  replication-offset-checkpoint
kafka/bitnami/zookeeper/data/version-2/: snapshot.20  snapshot.33  snapshot.45  snapshot.58  snapshot.6a  snapshot.7e
